--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,153 +1,56 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.3.2
-aiosqlite==0.21.0
 annotated-types==0.7.0
 anyio==4.9.0
-asttokens==3.0.0
-async-timeout==4.0.3
-attrs==25.3.0
-banks==2.1.2
 beautifulsoup4==4.13.4
-Bottleneck==1.5.0
 cachetools==5.5.2
-certifi==2025.6.15
+certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
-colorama==0.4.6
-dataclasses-json==0.6.7
-decorator==5.2.1
-Deprecated==1.2.18
-dirtyjson==1.0.8
-distro==1.9.0
-docstring_parser==0.16
-dotenv==0.9.9
+deprecation==2.1.0
 exceptiongroup==1.3.0
-executing==2.2.0
-fastapi==0.115.13
-filetype==1.2.0
-frozenlist==1.7.0
-fsspec==2025.5.1
+fastapi==0.116.1
 google==3.0.0
-google-api-core==2.25.1
 google-auth==2.40.3
-google-cloud-aiplatform==1.97.0
-google-cloud-bigquery==3.34.0
-google-cloud-core==2.4.3
-google-cloud-resource-manager==1.14.2
-google-cloud-storage==2.19.0
-google-crc32c==1.7.1
 google-genai==1.20.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.70.0
+gotrue==2.12.3
 greenlet==3.2.3
-griffe==1.7.3
-grpc-google-iam-v1==0.14.2
-grpcio==1.73.0
-grpcio-status==1.73.0
 h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.0
+hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
-ipython==8.37.0
-jedi==0.19.2
-Jinja2==3.1.6
-jiter==0.10.0
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-langchain==0.3.25
-langchain-core==0.3.65
-langchain-google-vertexai==2.0.25
-langchain-text-splitters==0.3.8
-langsmith==0.3.45
-llama-cloud==0.1.26
-llama-cloud-services==0.6.34
-llama-index==0.12.43
-llama-index-agent-openai==0.4.11
-llama-index-cli==0.4.3
-llama-index-core==0.12.43
-llama-index-embeddings-langchain==0.3.0
-llama-index-embeddings-openai==0.3.1
-llama-index-indices-managed-llama-cloud==0.7.7
-llama-index-instrumentation==0.1.0
-llama-index-llms-openai==0.4.7
-llama-index-llms-vertex==0.5.0
-llama-index-multi-modal-llms-openai==0.5.1
-llama-index-program-openai==0.3.2
-llama-index-question-gen-openai==0.3.1
-llama-index-readers-file==0.4.9
-llama-index-readers-llama-parse==0.4.0
-llama-index-workflows==0.2.2
-llama-parse==0.6.34
-MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-multidict==6.5.0
-mypy_extensions==1.1.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-nltk==3.9.1
-numexpr==2.11.0
-numpy==2.2.6
-openai==1.88.0
-orjson==3.10.18
-packaging==24.2
-pandas==2.2.3
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.2.1
-platformdirs==4.3.8
+packaging==25.0
 pluggy==1.6.0
-prompt_toolkit==3.0.51
-propcache==0.3.2
-proto-plus==1.26.1
+postgrest==1.1.1
 protobuf==6.31.1
 psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyarrow==19.0.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
-Pygments==2.19.1
-pypdf==5.6.0
+Pygments==2.19.2
+PyJWT==2.10.1
 pytest==8.4.1
-pytest-mock==3.14.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-regex==2024.11.6
+python-dotenv==1.1.1
+python-multipart==0.0.20
+realtime==2.6.0
 requests==2.32.4
-requests-toolbelt==1.0.0
 rsa==4.9.1
-shapely==2.1.1
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.41
-sqlalchemy-bigquery==1.14.1
-stack-data==0.6.3
-starlette==0.46.2
-striprtf==0.0.26
-tenacity==9.1.2
-tiktoken==0.9.0
+starlette==0.47.2
+storage3==0.12.0
+StrEnum==0.4.15
+supabase==2.17.0
+supafunc==0.10.1
 tomli==2.2.1
-tqdm==4.67.1
-traitlets==5.14.3
-typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions==4.14.0
-tzdata==2025.2
+typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.34.3
-validators==0.35.0
-wcwidth==0.2.13
 websockets==15.0.1
-wrapt==1.17.2
-yarl==1.20.1
-zstandard==0.23.0
