--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,25 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
+async-timeout==5.0.1
+attrs==25.3.0
 beautifulsoup4==4.13.4
+bs4==0.0.2
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+dataclasses-json==0.6.7
+Deprecated==1.2.18
 deprecation==2.1.0
+dirtyjson==1.0.8
+distro==1.9.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
+frozenlist==1.7.0
+fsspec==2025.7.0
 google==3.0.0
 google-auth==2.40.3
 google-genai==1.20.0
@@ -21,9 +33,32 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 iniconfig==2.1.0
+joblib==1.5.1
+llama-index==0.10.0
+llama-index-agent-openai==0.1.0
+llama-index-core==0.10.0
+llama-index-embeddings-openai==0.1.0
+llama-index-legacy==0.9.48.post4
+llama-index-llms-openai==0.1.0
+llama-index-multi-modal-llms-openai==0.1.0
+llama-index-program-openai==0.1.0
+llama-index-question-gen-openai==0.1.0
+llama-index-readers-file==0.1.0
+marshmallow==3.26.1
+multidict==6.6.3
+mypy_extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==1.26.4
+openai==1.12.0
 packaging==25.0
+pandas==2.1.4
+pillow==11.3.0
+plotly==5.18.0
 pluggy==1.6.0
 postgrest==1.1.1
+propcache==0.3.2
 protobuf==6.31.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
@@ -32,11 +67,15 @@ pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
+PyMuPDF==1.26.3
 pytest==8.4.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
 realtime==2.6.0
+regex==2024.11.6
 requests==2.32.4
 rsa==4.9.1
 six==1.17.0
@@ -48,9 +87,16 @@ storage3==0.12.0
 StrEnum==0.4.15
 supabase==2.17.0
 supafunc==0.10.1
+tenacity==8.5.0
+tiktoken==0.9.0
 tomli==2.2.1
+tqdm==4.67.1
+typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
 urllib3==2.5.0
 uvicorn==0.34.3
 websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.1
