--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,13 @@
 FROM python:3.10
 
 WORKDIR /app
-COPY backend/ /app
 
-RUN pip install --no-cache-dir -r requirements.txt
+# Install dependencies first to leverage Docker layer cache
+COPY requirements.txt /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
+# Copy application source
+COPY . /app
+
+EXPOSE 8000
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
