fix 2 - port flexibility

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,5 +9,6 @@ RUN pip install --no-cache-dir -r /app/requirements.txt
 # Copy application source
 COPY . /app
 
-EXPOSE 8000
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Cloud Run sets PORT env var (defaults to 8080). Respect it, defaulting to 8080 locally.
+EXPOSE 8080
+CMD ["/bin/sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8080}"]
